hw2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw2-app
  template:
    metadata:
      labels:
        app: hw2-app
    spec:
      containers:
        - name: hw2
          imagePullPolicy: Always
          image: nik1202/hw1:v2
          ports:
            - name: web
              containerPort: 8000
