hw2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw2-service
spec:
  selector:
    app: hw2-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
